Fix navbar' structure and background color in dark mode

--- a/fluxowebapp/src/index.css
+++ b/fluxowebapp/src/index.css
@@ -36,7 +36,7 @@
   }
  
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 217.2 40.8% 13.9%;
     --foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
